--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ certifi==2021.10.8
 charset-normalizer==2.0.10
 click==8.0.3
 Deprecated==1.2.13
+dnspython==2.2.0
+email-validator==1.1.3
 fastapi==0.71.0
 future==0.18.2
 gunicorn==20.1.0
